# backend/docs/swagger.yaml
@@ -71,9 +71,14 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/entity.Manga'
-            type: array
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.Manga'
+                  type: array
+              type: object
       summary: List manga
       tags:
       - manga
@@ -140,8 +145,44 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.Manga'
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.Manga'
+              type: object
       summary: List manga
+      tags:
+      - manga
+    put:
+      consumes:
+      - application/json
+      description: update manga by pass id
+      parameters:
+      - description: Manga Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: manga requested info
+        in: body
+        name: manga
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateMangaRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Update Manga
       tags:
       - manga
 swagger: "2.0"
